; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/extr_atiixp.c_ac97_probing_bugs.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/extr_atiixp.c_ac97_probing_bugs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.snd_pci_quirk = type { i32 }

@atiixp_quirks = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"atiixp quirk for %s.  Forcing codec %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_dev*)* @ac97_probing_bugs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ac97_probing_bugs(%struct.pci_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca %struct.snd_pci_quirk*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  %5 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %6 = load i32, i32* @atiixp_quirks, align 4
  %7 = call %struct.snd_pci_quirk* @snd_pci_quirk_lookup(%struct.pci_dev* %5, i32 %6)
  store %struct.snd_pci_quirk* %7, %struct.snd_pci_quirk** %4, align 8
  %8 = load %struct.snd_pci_quirk*, %struct.snd_pci_quirk** %4, align 8
  %9 = icmp ne %struct.snd_pci_quirk* %8, null
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %12 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %11, i32 0, i32 0
  %13 = load %struct.snd_pci_quirk*, %struct.snd_pci_quirk** %4, align 8
  %14 = call i32 @snd_pci_quirk_name(%struct.snd_pci_quirk* %13)
  %15 = load %struct.snd_pci_quirk*, %struct.snd_pci_quirk** %4, align 8
  %16 = getelementptr inbounds %struct.snd_pci_quirk, %struct.snd_pci_quirk* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @dev_dbg(i32* %12, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %17)
  %19 = load %struct.snd_pci_quirk*, %struct.snd_pci_quirk** %4, align 8
  %20 = getelementptr inbounds %struct.snd_pci_quirk, %struct.snd_pci_quirk* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %2, align 4
  br label %23

22:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %10
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local %struct.snd_pci_quirk* @snd_pci_quirk_lookup(%struct.pci_dev*, i32) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i32, i32) #1

declare dso_local i32 @snd_pci_quirk_name(%struct.snd_pci_quirk*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
